--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -32,6 +32,9 @@ jobs:
           mkdir -p database
           touch database/database.sqlite
 
+      - name: Migrate database
+        run: php artisan migrate --seed
+
       - name: Installing packages
         run: npm install
 
