--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -48,7 +48,7 @@ jobs:
         env:
           DB_CONNECTION: sqlite
           DB_DATABASE: database/database.sqlite
-        run: php artisan test
+        run: php artisan test --parallel
 
       - name: Static analyses - larastan
         run: vendor/bin/phpstan analyse
